--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "@types/node": "^16.11.27",
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
+    "antd": "^4.19.5",
+    "intro.js-react": "^0.6.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-ga4": "^1.4.1",
+    "react-gtm-module": "^2.0.11",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
@@ -41,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-gtm-module": "^2.0.1",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "eslint": "^8.14.0",
