--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
     "antd": "^4.19.5",
+    "axios": "^0.26.1",
     "intro.js-react": "^0.6.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -46,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/react-gtm-module": "^2.0.1",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
