--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^4.19.5",
     "axios": "^0.26.1",
     "intro.js-react": "^0.6.0",
+    "nanoid": "^3.3.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-ga4": "^1.4.1",
